# serializer version: 1
# name: test_all_entities[select.test_thermostat_air_cleaning_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'event_clean',
        'allergies',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_thermostat_air_cleaning_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Air cleaning event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Air cleaning event',
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'air_cleaning_event',
    'unique_id': 'aa:bb:cc:dd:ee:ff_air_cleaning_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.test_thermostat_air_cleaning_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Thermostat Air cleaning event',
      'options': list([
        'off',
        'event_clean',
        'allergies',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_thermostat_air_cleaning_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[select.test_thermostat_air_cleaning_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'constant_clean',
        'automatic',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_thermostat_air_cleaning_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Air cleaning mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Air cleaning mode',
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'air_cleaning_mode',
    'unique_id': 'aa:bb:cc:dd:ee:ff_air_cleaning_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.test_thermostat_air_cleaning_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Thermostat Air cleaning mode',
      'options': list([
        'off',
        'constant_clean',
        'automatic',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_thermostat_air_cleaning_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'constant_clean',
  })
# ---
# name: test_all_entities[select.test_thermostat_fresh_air_event-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        '3hour',
        '24hour',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_thermostat_fresh_air_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fresh air event',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fresh air event',
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fresh_air_event',
    'unique_id': 'aa:bb:cc:dd:ee:ff_fresh_air_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.test_thermostat_fresh_air_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Thermostat Fresh air event',
      'options': list([
        'off',
        '3hour',
        '24hour',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_thermostat_fresh_air_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[select.test_thermostat_fresh_air_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'automatic',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.test_thermostat_fresh_air_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fresh air mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fresh air mode',
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fresh_air_mode',
    'unique_id': 'aa:bb:cc:dd:ee:ff_fresh_air_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.test_thermostat_fresh_air_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Thermostat Fresh air mode',
      'options': list([
        'off',
        'automatic',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_thermostat_fresh_air_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'automatic',
  })
# ---
